Add variants swagger api
